appId: com.fuelgood.ios
---
- waitForAnimationToEnd:
    timeout: 500
- tapOn: "Next"
- waitForAnimationToEnd:
    timeout: 1500
- tapOn: "Next"
- waitForAnimationToEnd:
    timeout: 1500
- runFlow:
    when:
      visible: "Done"
    commands:
      - tapOn: "Done"
      - waitForAnimationToEnd:
          timeout: 6000
- runFlow:
    when:
      visible: "Log & Finish"
    commands:
      - tapOn: "Log & Finish"
      - waitForAnimationToEnd:
          timeout: 4000
